--- a/Gopaddi/VC/MainVC/FeedImageTableViewCell.xib
+++ b/Gopaddi/VC/MainVC/FeedImageTableViewCell.xib
@@ -113,9 +113,6 @@
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lorem ipsum dolor sit amet, consectetur elit. Enim at tempor. Dolor sit amet." textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bo0-ag-uL5">
                                 <rect key="frame" x="16" y="358" width="346" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="jHb-Ks-Ei1"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                 <color key="textColor" red="0.11372549019607843" green="0.14117647058823529" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -138,7 +135,7 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MEv-av-Vnw">
-                                <rect key="frame" x="213.66666666666666" y="323" width="18" height="25"/>
+                                <rect key="frame" x="233.66666666666666" y="323" width="18" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="25" id="dxf-4J-yvK"/>
                                 </constraints>
@@ -147,7 +144,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sv0" translatesAutoresizingMaskIntoConstraints="NO" id="dyo-Nc-Ddg">
-                                <rect key="frame" x="199.66666666666666" y="323" width="12" height="25"/>
+                                <rect key="frame" x="199.66666666666666" y="323" width="32" height="25"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="tintColor" systemColor="systemOrangeColor"/>
                                 <constraints>
@@ -262,7 +259,7 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kcI-y8-2L2">
-                                <rect key="frame" x="316" y="458" width="44" height="19"/>
+                                <rect key="frame" x="316" y="462" width="44" height="19"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="44" id="k9R-2X-V0w"/>
                                     <constraint firstAttribute="height" constant="19" id="uqa-wk-KFy"/>
@@ -383,6 +380,14 @@
                                     <constraint firstAttribute="height" constant="76" id="49a-zM-xY2"/>
                                 </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0w8-7g-3fq">
+                                <rect key="frame" x="16" y="358" width="346" height="40"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain"/>
+                                <connections>
+                                    <action selector="seemoreBts:" destination="vvN-oH-2xh" eventType="touchUpInside" id="phf-Ky-0f9"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -393,6 +398,7 @@
                             <constraint firstItem="dkt-WU-1vz" firstAttribute="top" secondItem="utE-Lm-0vr" secondAttribute="bottom" constant="13" id="3E6-Qp-jb0"/>
                             <constraint firstItem="yZs-p6-TdV" firstAttribute="top" secondItem="i1f-hv-nZ0" secondAttribute="top" constant="37" id="4FA-jv-kA5"/>
                             <constraint firstAttribute="trailing" secondItem="wQQ-m7-gGQ" secondAttribute="trailing" constant="135" id="4cl-zi-fdR"/>
+                            <constraint firstItem="0w8-7g-3fq" firstAttribute="trailing" secondItem="Bo0-ag-uL5" secondAttribute="trailing" id="4gx-jR-SBO"/>
                             <constraint firstItem="XsN-mc-1OH" firstAttribute="top" secondItem="BWC-ht-lE4" secondAttribute="bottom" constant="2" id="58s-DU-iXl"/>
                             <constraint firstItem="xkG-ww-pvT" firstAttribute="top" secondItem="BWC-ht-lE4" secondAttribute="bottom" constant="3" id="5Hd-Sl-fQr"/>
                             <constraint firstItem="pr0-AR-zR6" firstAttribute="leading" secondItem="i1f-hv-nZ0" secondAttribute="leading" id="5bh-bs-gOA"/>
@@ -406,6 +412,7 @@
                             <constraint firstAttribute="trailing" secondItem="Zub-bd-wmf" secondAttribute="trailing" constant="14" id="C2L-8u-QFM"/>
                             <constraint firstItem="Kui-kZ-eBP" firstAttribute="top" secondItem="pr0-AR-zR6" secondAttribute="bottom" constant="8" id="Chp-vB-xNb"/>
                             <constraint firstItem="bjV-FG-hjC" firstAttribute="leading" secondItem="i1f-hv-nZ0" secondAttribute="leading" constant="16" id="CtB-JS-Lq3"/>
+                            <constraint firstItem="0w8-7g-3fq" firstAttribute="bottom" secondItem="Bo0-ag-uL5" secondAttribute="bottom" id="DN1-zl-nqB"/>
                             <constraint firstItem="dyo-Nc-Ddg" firstAttribute="leading" secondItem="HeR-ii-ngy" secondAttribute="trailing" constant="20" id="EBe-Qe-8yN"/>
                             <constraint firstItem="QYR-8h-KDI" firstAttribute="leading" secondItem="BWC-ht-lE4" secondAttribute="trailing" constant="4.3300000000000001" id="EII-vq-d5b"/>
                             <constraint firstItem="gz4-iV-FkW" firstAttribute="top" secondItem="Kui-kZ-eBP" secondAttribute="bottom" constant="4" id="Gyo-Fe-H3G"/>
@@ -422,12 +429,13 @@
                             <constraint firstAttribute="bottom" secondItem="aBQ-vi-5Rf" secondAttribute="bottom" constant="10.67" id="Uy0-r4-J4L"/>
                             <constraint firstItem="gz4-iV-FkW" firstAttribute="leading" secondItem="i1f-hv-nZ0" secondAttribute="leading" constant="2" id="Vrf-cJ-jGO"/>
                             <constraint firstItem="aBQ-vi-5Rf" firstAttribute="leading" secondItem="i1f-hv-nZ0" secondAttribute="leading" constant="19" id="Wdu-zK-jwr"/>
-                            <constraint firstItem="kcI-y8-2L2" firstAttribute="top" secondItem="Kui-kZ-eBP" secondAttribute="bottom" constant="4" id="WpK-WG-LT7"/>
+                            <constraint firstItem="kcI-y8-2L2" firstAttribute="top" secondItem="Kui-kZ-eBP" secondAttribute="bottom" constant="8" id="WpK-WG-LT7"/>
                             <constraint firstItem="3Wf-Nb-IhP" firstAttribute="top" secondItem="utE-Lm-0vr" secondAttribute="bottom" constant="13" id="XDd-ro-ABN"/>
                             <constraint firstItem="Bo0-ag-uL5" firstAttribute="top" secondItem="rqd-ay-Jja" secondAttribute="bottom" constant="10" id="XQF-KW-MEF"/>
                             <constraint firstAttribute="trailing" secondItem="pr0-AR-zR6" secondAttribute="trailing" id="YNP-VZ-458"/>
                             <constraint firstItem="0Vb-Bj-koR" firstAttribute="top" secondItem="i1f-hv-nZ0" secondAttribute="top" constant="37" id="YiZ-jc-7R1"/>
                             <constraint firstItem="rqd-ay-Jja" firstAttribute="top" secondItem="utE-Lm-0vr" secondAttribute="bottom" constant="13" id="YnB-aa-Vcq"/>
+                            <constraint firstItem="0w8-7g-3fq" firstAttribute="leading" secondItem="Bo0-ag-uL5" secondAttribute="leading" id="aiR-ho-GGI"/>
                             <constraint firstItem="wQQ-m7-gGQ" firstAttribute="top" secondItem="xkG-ww-pvT" secondAttribute="bottom" constant="94" id="c42-lB-NWZ"/>
                             <constraint firstAttribute="trailing" secondItem="6FZ-MV-kgV" secondAttribute="trailing" constant="42" id="cNJ-g1-lLy"/>
                             <constraint firstItem="Zub-bd-wmf" firstAttribute="top" secondItem="utE-Lm-0vr" secondAttribute="bottom" constant="13" id="cPD-cZ-FNb"/>
@@ -443,6 +451,7 @@
                             <constraint firstItem="utE-Lm-0vr" firstAttribute="top" secondItem="bjV-FG-hjC" secondAttribute="bottom" constant="6" id="kAl-P8-8X7"/>
                             <constraint firstItem="k4c-Vv-2ad" firstAttribute="top" secondItem="i1f-hv-nZ0" secondAttribute="top" constant="19" id="mzI-tt-4qu"/>
                             <constraint firstItem="Bo0-ag-uL5" firstAttribute="leading" secondItem="i1f-hv-nZ0" secondAttribute="leading" constant="16" id="nIe-Fw-auT"/>
+                            <constraint firstItem="0w8-7g-3fq" firstAttribute="top" secondItem="Bo0-ag-uL5" secondAttribute="top" id="nPm-EZ-EP3"/>
                             <constraint firstItem="pr0-AR-zR6" firstAttribute="top" secondItem="Bo0-ag-uL5" secondAttribute="bottom" constant="7" id="nbk-o8-JLl"/>
                             <constraint firstItem="0Vb-Bj-koR" firstAttribute="leading" secondItem="yZs-p6-TdV" secondAttribute="trailing" constant="4.3300000000000001" id="oaW-o6-y2w"/>
                             <constraint firstAttribute="trailing" secondItem="Kui-kZ-eBP" secondAttribute="trailing" constant="12" id="ojD-yC-o3g"/>
@@ -484,6 +493,7 @@
                 <outlet property="likeBtn" destination="kJI-Qz-9RF" id="FWo-1s-NJn"/>
                 <outlet property="postImage" destination="utE-Lm-0vr" id="29J-98-e0J"/>
                 <outlet property="saveImgView" destination="dyo-Nc-Ddg" id="QWi-tq-VGr"/>
+                <outlet property="seemoreBtn" destination="0w8-7g-3fq" id="vQ6-pE-OZ8"/>
                 <outlet property="shareImgView" destination="ZYt-76-LMH" id="i93-Py-x3l"/>
                 <outlet property="us_picture" destination="bjV-FG-hjC" id="ZIh-Ka-uEg"/>
                 <outlet property="userName" destination="BWC-ht-lE4" id="Byu-YN-a3A"/>
@@ -506,7 +516,7 @@
         <image name="notess01" width="14" height="16"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
         <image name="smallcircle.filled.circle.fill" catalog="system" width="128" height="123"/>
-        <image name="sv0" width="12" height="16"/>
+        <image name="sv0" width="32" height="32"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
